crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_007_AxROM_Time_Lord.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-007-AxROM/Time Lord.nes
rom_sha256=14dc1e8fb7b7ba8fc9c85625b88422220eaf61e65ce5ba067f474c1e4733b377
frames=1141
fb_bytes=245760
cycles=33949827
audio_samples=836506
audio_fnv1a64=35b3d2ae89d3d511
checkpoint f900 fb_fnv1a64=1719dca5cef7a325
checkpoint f1100 fb_fnv1a64=712ceedf1e0c43cd
