crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_009_MMC2_Gradius_II_J_VC_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-009-MMC2/Gradius II (J) (VC).zip
rom_sha256=2f941b76a62a886978ca521c05e100960f39eb2e09a0dbd2cef0bc797f5c0c24
frames=1141
fb_bytes=245760
cycles=96116
audio_samples=2351
audio_fnv1a64=39acdc7b1f3a3c73
checkpoint f900 fb_fnv1a64=685b12114a576325
checkpoint f1100 fb_fnv1a64=685b12114a576325
