crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_009_MMC2_Nude_Punch_Out_Punch_Out_Hack_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-009-MMC2/Nude Punch Out (Punch-Out!! Hack).zip
rom_sha256=aa9a2a6942bedad1e860332bbd0117e53f16ad2e23c96f3ee7e1d0558715b7c5
frames=1141
fb_bytes=245760
cycles=33949810
audio_samples=836506
audio_fnv1a64=bc6ce4cc58f650e0
checkpoint f900 fb_fnv1a64=1bb2f99df981e722
checkpoint f1100 fb_fnv1a64=88a60e2cbd7b3e0c
