crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_009_MMC2_Punch_Out.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-009-MMC2/Punch-Out!!.nes
rom_sha256=520f679147090b7af54f632fa136c005c9647ec83d2a4c282206426d6ecd5e81
frames=1141
fb_bytes=245760
cycles=33949807
audio_samples=836506
audio_fnv1a64=6522668b2aec000c
checkpoint f900 fb_fnv1a64=a291e7119fea5d05
checkpoint f1100 fb_fnv1a64=062cd8835fb946dc
