crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_010_MMC4_Castlevania_II_Simon_s_Quest_Improved_Controls_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-010-MMC4/Castlevania II - Simon's Quest (Improved Controls).zip
rom_sha256=891958b9b273dd944ad3428f8d2a53874a20c26115b338380805360f804a6c85
frames=1141
fb_bytes=245760
cycles=33949784
audio_samples=836505
audio_fnv1a64=3d523a9fb32c1248
checkpoint f900 fb_fnv1a64=ed33594ba62c24b1
checkpoint f1100 fb_fnv1a64=ed33594ba62c24b1
